# try-again

./: Cargo.toml  README.md
src/: delay.rs  delay_executor.rs  delay_strategy.rs  duration.rs  fallible.rs  lib.rs  retry.rs  tracked_iterator.rs
src/delay/: exponential.rs  fixed.rs  mod.rs  none.rs
tests/: async_tests.rs  sync_tests.rs
