[package]
name = "try-again"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/try-again"
description = """
Retry synchronous and asynchronous operations.
"""
categories = ["rust-patterns", "asynchronous"]
keywords = ["try", "again", "retry", "retry-async"]

[features]
default = ["async", "async-tokio"]
async = []
async-tokio = ["async", "dep:tokio"]

[dependencies]
tokio = { version = "1", features = ["time"], optional = true }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
assertr = "0.3.1"
